# wavey

./: .clang-format  .gitignore  .gitmodules  README.md  audio_buffer.cpp  audio_buffer.hpp  audio_system.cpp  audio_system.hpp  gl_waveform.cpp  gl_waveform.hpp  gpu_spectrogram.cpp  gpu_spectrogram.hpp  gpu_track_label.cpp  gpu_waveform.cpp  gpu_waveform.hpp  gui.cpp  gui.hpp  label_renderer.cpp  label_renderer.hpp  line_renderer.cpp  line_renderer.hpp  main.cpp  meson.build  power_spectrum.cpp  power_spectrum.hpp  primitive_renderer.cpp  primitive_renderer.hpp  quad_renderer.cpp  quad_renderer.hpp  shader.cpp  shader.hpp  spectrogram.cpp  spectrogram.hpp  spectrogram_shader.cpp  spectrogram_shader.hpp  state.cpp  state.hpp  track_label.cpp  track_label.hpp  wave_shader.cpp  (+3 more)
resources/: meson.build  wavey.desktop
src/: audio_buffer.cpp  audio_buffer.hpp  audio_mixer.cpp  audio_mixer.hpp  audio_system.cpp  audio_system.hpp  file_load_server.cpp  file_load_server.hpp  file_notification.cpp  file_notification.hpp  file_notification_linux.cpp  file_notification_macos.cpp  glitch_detector.cpp  glitch_detector.hpp  gpu_label.cpp  gpu_label.hpp  gpu_spectrogram.cpp  gpu_spectrogram.hpp  gpu_track_label.hpp  gpu_waveform.cpp  gpu_waveform.hpp  gui.cpp  gui.hpp  label.cpp  label.hpp  label_renderer.cpp  label_renderer.hpp  load_client.cpp  load_client.hpp  load_server.cpp  load_server.hpp  low_res_waveform.cpp  low_res_waveform.hpp  main.cpp  meson.build  primitive_renderer.cpp  primitive_renderer.hpp  renderer.cpp  renderer.hpp  sample_line_shader.cpp  (+21 more)
