project('wavey', 'cpp', default_options : ['cpp_std=c++17'])
gl = dependency('gl')
glm = dependency('glm')
portaudio = dependency('portaudio-2.0')
sndfile = dependency('sndfile')
fftw = dependency('fftw3f')
openmp = dependency('openmp')
sdl2 = dependency('sdl2')
dl = dependency('dl')

subdir('third_party')
subdir('src')
subdir('resources')
