project('wavey', 'cpp', default_options : ['cpp_std=c++17'])
gl = dependency('gl')
glm = dependency('glm')
sndfile = dependency('sndfile')
fftw = dependency('fftw3f')
openmp = dependency('openmp')
sdl3 = dependency('sdl3')
dl = dependency('dl')

subdir('third_party')
subdir('src')
subdir('resources')
